--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,12 @@
+@font-face {
+	font-family: 'Inter';
+	src: local(Inter),
+	url("./public/fonts/Inter-Regular.ttf") format("ttf"),
+	url("./public/fonts/Inter-Medium.ttf") format("ttf"),
+	url("./public/fonts/Inter-SemiBold.ttf") format("ttf"),
+	url("./public/fonts/Inter-Bold.ttf") format("ttf"),
+}
+
 * {
 	margin: 0;
 	padding: 0;
