--- a/src/global.scss
+++ b/src/global.scss
@@ -80,6 +80,9 @@ body {
 				font-weight: 500;
 				line-height: normal;
 				letter-spacing: -0.32px;
+				cursor: pointer;
+				outline: none;
+				border: none;
 
 				.burger_wrap {
 					width: 20px;
@@ -143,6 +146,12 @@ body {
 			max-width: 263px;
 			width: 100%;
 			box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+
+			button {
+				outline: none;
+				border: none;
+				background-color: transparent;
+			}
 		}
 
 		.header_search {
@@ -430,9 +439,7 @@ body {
 
 		.header_wrap {
 			.header_center_wrap {
-				display: flex;
-				align-items: center;
-				gap: 40px;
+				display: none;
 
 				.header_btn {
 					display: none;
@@ -452,74 +459,118 @@ body {
 				align-items: center;
 				gap: 16px;
 
-				.header_btn_mobile {
-					display: flex;
+				.mobile_header_search {
+					outline: none;
+					border: none;
+					background: transparent;
+				}
+
+				.mobile_header_btn {
+					display: inline-flex;
 					padding: 8px 12px;
 					justify-content: center;
 					align-items: center;
 					gap: 8px;
-
-					width: 44px;
-					height: 36px;
+					height: 45px;
+					width: 45px;
 					border-radius: 8px;
 					background: #011e34;
 
-					.burger_wrap {
+					.hamburger {
 						width: 20px;
-						height: 20px;
-						position: relative;
-
-						span {
+						height: 2px;
+						background: #fff;
+						border-radius: 5px;
+						box-shadow: 0 2px 5px rgb(255, 101, 47, 0.2);
+						transition: all 0.5s ease-in-out;
+						&::before {
+							content: '';
 							position: absolute;
-							width: 100%;
+							width: 20px;
 							height: 2px;
 							background: #fff;
 							border-radius: 5px;
-							left: 0;
+							transition: all 0.5s ease-in-out;
+							transform: translateY(-10px);
 						}
-
-						.burger1 {
-							transition: all ease 0.5s;
-							top: 0;
+						&::after {
+							content: '';
+							position: absolute;
+							width: 20px;
+							height: 2px;
+							background: #fff;
+							border-radius: 5px;
+							transition: all 0.5s ease-in-out;
+							transform: translateY(10px);
 						}
+					}
 
-						.burger2 {
-							transition: all ease 0.5s;
-							top: 0;
-							bottom: 0;
-							margin: auto;
-							opacity: 1;
+					.activeHamburger {
+						width: 20px;
+						height: 2px;
+						border-radius: 5px;
+						transform: translateX(-50px);
+						background: transparent;
+						transition: all 0.5s ease-in-out;
+						&::before {
+							content: '';
+							position: absolute;
+							width: 20px;
+							height: 2px;
+							background: #fff;
+							border-radius: 5px;
+							transition: all 0.5s ease-in-out;
+							transform: rotate(45deg) translate(35px, -35px);
 						}
-
-						.burger3 {
-							transition: all ease 0.5s;
-							bottom: 0;
+						&::after {
+							content: '';
+							position: absolute;
+							width: 20px;
+							height: 2px;
+							background: #fff;
+							border-radius: 5px;
+							transition: all 0.5s ease-in-out;
+							transform: rotate(-45deg) translate(35px, 35px);
 						}
 					}
 				}
-				
-				.mobile-menu {
-					display: none;
-				}
 
-				.open {
-					display: block;
-					visibility: visible;
-					background-color: rgba(0,0,0,.7);
-				}
-
-				.mobile_header_nav {
+				.sideNav {
 					position: fixed;
-					display: flex;
-					gap: 30px;
-					flex-direction: column;
-					align-items: flex-start;
-					width: 70%;
-					background: #667085;
-					padding: 10px;
-					top: 0;
-					bottom: 0;
-					left: 0;
+					top: 70px;
+					width: 100%;
+					height: 100vh;
+					background: linear-gradient(150deg, #ffffff 0%, #ffffff 74%);
+					transform: translateX(100%);
+					transition: all 0.5s ease-in-out;
+				}
+
+				.activeSideNav {
+					position: fixed;
+					top: 70px;
+					width: 100%;
+					height: 100vh;
+					background: linear-gradient(150deg, #ffffff 0%, #ffffff 74%);
+					transform: translateX(-50%);
+					transition: all 0.5s ease-in-out;
+				}
+
+				.mobile_header_list {
+					list-style-type: none;
+					padding: 10px 20px;
+
+					li {
+						padding: 20px 0 ;
+
+						a {
+							margin: 20px 0;
+							color: #667085;
+							font-size: 16px;
+							font-style: normal;
+							font-weight: 600;
+							line-height: 24px;
+						}
+					}
 				}
 			}
 		}
